# Pashto_Sign_Language

./: README.md  app.py  app_v2.py  appv2.py  dataset.ipynb  gesture_classifier.pth  gesture_classifier_traced.pt  label_encoder.pkl  modelTrain.ipynb  optimize_it.ipynb  pyproject.toml  scaler.pkl
