[project]
name = "pashto-sign-language"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
